# fastagent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  compose.yaml  instructions.md  pyproject.toml
app/: crud.py  main.py  models.py
app/ag_ui/: adapter.py
app/agent/: instructions.py  session.py  tools.py
app/api/: deps.py  main.py
app/api/routes/: session.py
app/core/: config.py  db.py  file.py
